--- a/style.css
+++ b/style.css
@@ -2,6 +2,25 @@
     width: 50%;
 }
 
-.progress {
+/* .progress {
     display: none;
+} */
+.in-progress {
+    margin: 0 0 10px 10px;
+}
+.fade-slide {
+    overflow: hidden;
+    transition: opacity 0.3s ease, max-height 0.3s ease;
+    opacity: 1;
+    max-height: 500px;
+  }
+  
+  .fade-slide.hidden {
+    opacity: 0;
+    max-height: 0;
+    pointer-events: none;
+  }
+
+.clear {
+    border-radius: 50%;
 }
